# smartincident

./: GUIDE_UBUNTU.md.resolved  INSTALL.md  README.md  SERVER_INSTALL.md
backend/: Cargo.toml  fix_password.js
backend/src/: app.js  main.rs
backend/src/config/: database.js  database.rs
backend/src/controllers/: auth.rs  authController.js  comment.rs  company.rs  dashboard.rs  dashboardController.js  incident.rs  incidentController.js  mod.rs  settings.rs  ticket_type.rs  upload.rs  user.rs
backend/src/middleware/: auth.rs  uploadMiddleware.js
backend/src/models/: attachment.rs  comment.rs  company.rs  incident.rs  mod.rs  notification_config.rs  ticket_type.rs  user.rs
backend/src/routes/: auth.rs  comment.rs  company.rs  dashboard.rs  incident.rs  mod.rs  settings.rs  ticket_type.rs  upload.rs  user.rs  userRoutes.js
backend/src/utils/: email.rs  jwt.rs  mod.rs  sockets.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: manifest.json  sw.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AgentDashboard.jsx  ClientDashboard.jsx  Header.jsx  Layout.jsx  Sidebar.jsx  SuperadminDashboard.jsx
frontend/src/pages/: CompanyListPage.jsx  HistoryPage.jsx  IncidentDetailPage.jsx  IncidentListPage.jsx  LoginPage.jsx  SettingsPage.jsx  UserListPage.jsx
