[package]
name = "smartincident-backend-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sea-orm = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
# Quitamos SQLx explícito si no lo necesitamos directamente para evitar conflictos, o usamos la versión compatible con sea-orm 1.0
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros"] }

# Security
jsonwebtoken = "9.2"
bcrypt = "0.15"
dotenvy = "0.15"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust_xlsxwriter = "0.62"
csv = "1.3"

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

# WebSockets (Socket.io compatible)
socketioxide = { version = "0.15", features = ["extensions"] }
